@@ -57,11 +57,11 @@ import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.QueryFilter;
 import org.hisp.dhis.common.QueryItem;
 import org.hisp.dhis.common.QueryOperator;
+import org.hisp.dhis.common.UID;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.dataelement.DataElementService;
 import org.hisp.dhis.feedback.BadRequestException;
 import org.hisp.dhis.feedback.ForbiddenException;
-import org.hisp.dhis.feedback.NotFoundException;
 import org.hisp.dhis.note.Note;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.program.EnrollmentStatus;
@@ -136,16 +136,16 @@ class EventExporterTest extends TrackerTest {
     injectSecurityContextUser(importUser);
 
     operationParamsBuilder = EventOperationParams.builder().eventParams(EventParams.FALSE);
-    operationParamsBuilder.orgUnitUid(orgUnit.getUid()).orgUnitMode(SELECTED);
+    operationParamsBuilder.orgUnit(UID.of(orgUnit)).orgUnitMode(SELECTED);
   }
 
   @Test
   void shouldExportEventAndMapAssignedUserWhenAssignedUserIsNotNull()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .trackedEntityUid(trackedEntity.getUid())
-            .enrollments(Set.of("TvctPPhpD8z"))
+            .trackedEntity(UID.of(trackedEntity))
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -155,10 +155,12 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldReturnEventsWithRelationships()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldReturnEventsWithRelationships() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        operationParamsBuilder.events(Set.of("pTzf9KYMk72")).eventParams(EventParams.TRUE).build();
+        operationParamsBuilder
+            .events(Set.of(UID.of("pTzf9KYMk72")))
+            .eventParams(EventParams.TRUE)
+            .build();
 
     List<Event> events = eventService.getEvents(params);
 
@@ -171,9 +173,9 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldReturnEventsWithNotes()
-      throws ForbiddenException, BadRequestException, NotFoundException {
-    EventOperationParams params = operationParamsBuilder.events(Set.of("pTzf9KYMk72")).build();
+  void shouldReturnEventsWithNotes() throws ForbiddenException, BadRequestException {
+    EventOperationParams params =
+        operationParamsBuilder.events(Set.of(UID.of("pTzf9KYMk72"))).build();
 
     List<Event> events = eventService.getEvents(params);
 
@@ -186,9 +188,8 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void testExportEvents() throws ForbiddenException, BadRequestException, NotFoundException {
-    EventOperationParams params =
-        operationParamsBuilder.programStageUid(programStage.getUid()).build();
+  void testExportEvents() throws ForbiddenException, BadRequestException {
+    EventOperationParams params = operationParamsBuilder.programStage(UID.of(programStage)).build();
 
     List<String> events = getEvents(params);
 
@@ -196,12 +197,11 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void testExportEventsWhenFilteringByEnrollment()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void testExportEventsWhenFilteringByEnrollment() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .trackedEntityUid(trackedEntity.getUid())
-            .enrollments(Set.of("TvctPPhpD8z"))
+            .trackedEntity(UID.of(trackedEntity))
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
             .build();
 
     List<String> events = getEvents(params);
@@ -211,11 +211,11 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWithExecutionAndUpdateDates()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
             .occurredAfter(getDate(2018, 1, 1))
             .occurredBefore(getDate(2020, 1, 29))
             .skipChangedBefore(getDate(2018, 1, 1))
@@ -227,12 +227,11 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void testExportEventsWithLastUpdateDuration()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void testExportEventsWithLastUpdateDuration() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
             .updatedWithin("1d")
             .build();
 
@@ -243,11 +242,11 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnEventsIfItOccurredBetweenPassedDateAndTime()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
             .occurredBefore(Date.from(getDate(2020, 1, 28).toInstant().plus(1, ChronoUnit.HOURS)))
             .occurredAfter(Date.from(getDate(2020, 1, 28).toInstant().minus(1, ChronoUnit.HOURS)))
             .build();
@@ -259,11 +258,11 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnEventsIfItOccurredAtTheSameDateAndTimeOfOccurredBeforePassed()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
             .occurredBefore(getDate(2020, 1, 28))
             .build();
 
@@ -274,11 +273,11 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnEventsIfItOccurredAtTheSameDateAndTimeOfOccurredAfterPassed()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
             .occurredAfter(getDate(2020, 1, 28))
             .build();
 
@@ -288,13 +287,12 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void testExportEventsWithLastUpdateDates()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void testExportEventsWithLastUpdateDates() throws ForbiddenException, BadRequestException {
     Date date = new Date();
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
             .updatedAfter(
                 Date.from(
                     date.toInstant()
@@ -316,9 +314,12 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWithDatesIncludingTimeStamp()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
-        operationParamsBuilder.orgUnitMode(ACCESSIBLE).events(Set.of("pTzf9KYMk72")).build();
+        operationParamsBuilder
+            .orgUnitMode(ACCESSIBLE)
+            .events(Set.of(UID.of("pTzf9KYMk72")))
+            .build();
 
     List<Event> events = eventService.getEvents(params);
 
@@ -347,12 +348,12 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsLike()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00001");
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of("DATAEL00001", List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
             .build();
@@ -366,13 +367,13 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithStatusFilter()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00001");
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
             .enrollmentStatus(EnrollmentStatus.ACTIVE)
             .dataElementFilters(
                 Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
@@ -385,13 +386,13 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithProgramTypeFilter()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00001");
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
             .programType(ProgramType.WITH_REGISTRATION)
             .dataElementFilters(
                 Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "%val%"))))
@@ -404,13 +405,13 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsEqual()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00001");
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of(
                     dataElement.getUid(),
@@ -424,13 +425,13 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsIn()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement datael00001 = dataElement("DATAEL00001");
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ", "TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(UID.of("nxP7UnKhomJ", "TvctPPhpD8z"))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of(
                     datael00001.getUid(),
@@ -444,16 +445,16 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithCategoryOptionSuperUser()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00001");
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
-            .programUid(program.getUid())
-            .attributeCategoryCombo("bjDvmb4bfuf")
-            .attributeCategoryOptions(Set.of("xYerKDKCefk"))
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
+            .program(UID.of(program))
+            .attributeCategoryCombo(UID.of("bjDvmb4bfuf"))
+            .attributeCategoryOptions(Set.of(UID.of("xYerKDKCefk")))
             .dataElementFilters(
                 Map.of(
                     dataElement.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "value00001"))))
@@ -465,14 +466,13 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldReturnEventsGivenCategoryOptionCombo()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldReturnEventsGivenCategoryOptionCombo() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
-            .attributeCategoryCombo("O4VaNks6tta")
-            .attributeCategoryOptions(Set.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
+            .attributeCategoryCombo(UID.of("O4VaNks6tta"))
+            .attributeCategoryOptions(UID.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -495,7 +495,7 @@ class EventExporterTest extends TrackerTest {
                                         e.getAttributeOptionCombo().getCategoryOptions().stream()
                                             .map(CategoryOption::getUid)
                                             .collect(Collectors.toSet()))))
-            .collect(Collectors.toList());
+            .toList();
     assertAll("all events should have the same category option combo and options", executables);
   }
 
@@ -505,10 +505,10 @@ class EventExporterTest extends TrackerTest {
     idSchemes.setCategoryOptionComboIdScheme("ATTRIBUTE:GOLswS44mh8");
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
             .idSchemes(idSchemes)
-            .events(Set.of("kWjSezkXHVp"))
+            .events(Set.of(UID.of("kWjSezkXHVp")))
             .build();
 
     IllegalStateException ex =
@@ -518,8 +518,7 @@ class EventExporterTest extends TrackerTest {
   }
 
   @Test
-  void shouldReturnEventsGivenIdSchemeCode()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldReturnEventsGivenIdSchemeCode() throws ForbiddenException, BadRequestException {
     IdSchemes idSchemes = new IdSchemes();
     idSchemes.setProgramIdScheme("code");
     idSchemes.setProgramStageIdScheme("code");
@@ -528,11 +527,11 @@ class EventExporterTest extends TrackerTest {
 
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
             .idSchemes(idSchemes)
-            .attributeCategoryCombo("O4VaNks6tta")
-            .attributeCategoryOptions(Set.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
+            .attributeCategoryCombo(UID.of("O4VaNks6tta"))
+            .attributeCategoryOptions(UID.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -566,13 +565,12 @@ class EventExporterTest extends TrackerTest {
                                         e.getAttributeOptionCombo().getCategoryOptions().stream()
                                             .map(CategoryOption::getUid)
                                             .collect(Collectors.toSet()))))
-            .collect(Collectors.toList());
+            .toList();
     assertAll("all events should have the same category option combo and options", executables);
   }
 
   @Test
-  void shouldReturnEventsGivenIdSchemeAttribute()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void shouldReturnEventsGivenIdSchemeAttribute() throws ForbiddenException, BadRequestException {
     IdSchemes idSchemes = new IdSchemes();
     idSchemes.setProgramIdScheme("ATTRIBUTE:j45AR9cBQKc");
     idSchemes.setProgramStageIdScheme("ATTRIBUTE:j45AR9cBQKc");
@@ -580,11 +578,11 @@ class EventExporterTest extends TrackerTest {
     idSchemes.setCategoryOptionComboIdScheme("ATTRIBUTE:j45AR9cBQKc");
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid("DiszpKrYNg8")
+            .orgUnit(UID.of("DiszpKrYNg8"))
             .orgUnitMode(SELECTED)
             .idSchemes(idSchemes)
-            .attributeCategoryCombo("O4VaNks6tta")
-            .attributeCategoryOptions(Set.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
+            .attributeCategoryCombo(UID.of("O4VaNks6tta"))
+            .attributeCategoryOptions(UID.of("xwZ2u3WyQR0", "M58XdOfhiJ7"))
             .build();
 
     List<Event> events = eventService.getEvents(params);
@@ -623,24 +621,24 @@ class EventExporterTest extends TrackerTest {
                                         e.getAttributeOptionCombo().getCategoryOptions().stream()
                                             .map(CategoryOption::getUid)
                                             .collect(Collectors.toSet()))))
-            .collect(Collectors.toList());
+            .toList();
     assertAll("all events should have the same category option combo and options", executables);
   }
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithCategoryOptionNotSuperUser()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     injectSecurityContextUser(
         createAndAddUser(false, "user", Set.of(orgUnit), Set.of(orgUnit), "F_EXPORT_DATA"));
     DataElement dataElement = dataElement("DATAEL00002");
 
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
-            .programUid(program.getUid())
-            .attributeCategoryCombo("bjDvmb4bfuf")
-            .attributeCategoryOptions(Set.of("xYerKDKCefk"))
+            .enrollments(Set.of(UID.of("TvctPPhpD8z")))
+            .programStage(UID.of(programStage))
+            .program(UID.of(program))
+            .attributeCategoryCombo(UID.of("bjDvmb4bfuf"))
+            .attributeCategoryOptions(Set.of(UID.of("xYerKDKCefk")))
             .dataElementFilters(
                 Map.of(
                     dataElement.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "value00002"))))
@@ -653,12 +651,12 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithOptionSetEqual()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00005");
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "option1"))))
             .build();
@@ -670,12 +668,12 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithOptionSetIn()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00005");
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ", "TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(UID.of("nxP7UnKhomJ", "TvctPPhpD8z"))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of(
                     dataElement.getUid(),
@@ -689,12 +687,12 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByDataElementsWithOptionSetLike()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00005");
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ"))
-            .programStageUid(programStage.getUid())
+            .enrollments(Set.of(UID.of("nxP7UnKhomJ")))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of(dataElement.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "%opt%"))))
             .build();
@@ -706,12 +704,12 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testExportEventsWhenFilteringByNumericDataElements()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     DataElement dataElement = dataElement("DATAEL00006");
     EventOperationParams params =
         operationParamsBuilder
-            .enrollments(Set.of("nxP7UnKhomJ", "TvctPPhpD8z"))
-            .programStageUid(programStage.getUid())
+            .enrollments(UID.of("nxP7UnKhomJ", "TvctPPhpD8z"))
+            .programStage(UID.of(programStage))
             .dataElementFilters(
                 Map.of(
                     dataElement.getUid(),
@@ -727,7 +725,7 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void testEnrollmentEnrolledBeforeSetToBeforeFirstEnrolledAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentEnrolledBefore(parseDate("2021-02-27T12:05:00.000"))
@@ -736,14 +734,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
 
   @Test
   void testEnrollmentEnrolledBeforeEqualToFirstEnrolledAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentEnrolledBefore(parseDate("2021-02-28T12:05:00.000"))
@@ -752,14 +750,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
 
   @Test
   void testEnrollmentEnrolledBeforeSetToAfterFirstEnrolledAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentEnrolledBefore(parseDate("2021-02-28T13:05:00.000"))
@@ -768,14 +766,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
 
   @Test
   void testEnrollmentEnrolledAfterSetToBeforeLastEnrolledAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentEnrolledAfter(parseDate("2021-03-27T12:05:00.000"))
@@ -784,14 +782,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
 
   @Test
   void testEnrollmentEnrolledAfterEqualToLastEnrolledAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentEnrolledAfter(parseDate("2021-03-28T12:05:00.000"))
@@ -800,14 +798,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
 
   @Test
   void testEnrollmentEnrolledAfterSetToAfterLastEnrolledAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentEnrolledAfter(parseDate("2021-03-28T13:05:00.000"))
@@ -816,14 +814,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
 
   @Test
   void testEnrollmentOccurredBeforeSetToBeforeFirstOccurredAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentOccurredBefore(parseDate("2021-02-27T12:05:00.000"))
@@ -832,14 +830,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
 
   @Test
   void testEnrollmentOccurredBeforeEqualToFirstOccurredAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentOccurredBefore(parseDate("2021-02-28T12:05:00.000"))
@@ -848,14 +846,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
 
   @Test
   void testEnrollmentOccurredBeforeSetToAfterFirstOccurredAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentOccurredBefore(parseDate("2021-02-28T13:05:00.000"))
@@ -864,14 +862,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("nxP7UnKhomJ"), enrollments);
   }
 
   @Test
   void testEnrollmentOccurredAfterSetToBeforeLastOccurredAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentOccurredAfter(parseDate("2021-03-27T12:05:00.000"))
@@ -880,14 +878,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
 
   @Test
   void testEnrollmentOccurredAfterEqualToLastOccurredAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentOccurredAfter(parseDate("2021-03-28T12:05:00.000"))
@@ -896,7 +894,7 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("TvctPPhpD8z"), enrollments);
   }
@@ -904,27 +902,26 @@ class EventExporterTest extends TrackerTest {
   @Test
   void
       shouldFilterOutEventsWithATrackedEntityWithoutThatAttributeWhenFilterAttributeHasNoQueryFilter()
-          throws ForbiddenException, BadRequestException, NotFoundException {
+          throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(UID.of(orgUnit))
             .attributeFilters(Map.of("notUpdated0", List.of()))
             .build();
 
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
 
   @Test
-  void testEnrollmentFilterNumericAttributes()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void testEnrollmentFilterNumericAttributes() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(UID.of(orgUnit))
             .attributeFilters(
                 Map.of(
                     "numericAttr",
@@ -936,17 +933,16 @@ class EventExporterTest extends TrackerTest {
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
 
   @Test
-  void testEnrollmentFilterAttributes()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+  void testEnrollmentFilterAttributes() throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(UID.of(orgUnit))
             .attributeFilters(
                 Map.of("toUpdate000", List.of(new QueryFilter(QueryOperator.EQ, "summer day"))))
             .build();
@@ -954,17 +950,17 @@ class EventExporterTest extends TrackerTest {
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("QS6w44flWAf"), trackedEntities);
   }
 
   @Test
   void testEnrollmentFilterAttributesWithMultipleFiltersOnDifferentAttributes()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(UID.of(orgUnit))
             .attributeFilters(
                 Map.of(
                     "toUpdate000",
@@ -976,17 +972,17 @@ class EventExporterTest extends TrackerTest {
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
 
   @Test
   void testEnrollmentFilterAttributesWithMultipleFiltersOnTheSameAttribute()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
-            .orgUnitUid(orgUnit.getUid())
+            .orgUnit(UID.of(orgUnit))
             .attributeFilters(
                 Map.of(
                     "toUpdate000",
@@ -998,14 +994,14 @@ class EventExporterTest extends TrackerTest {
     List<String> trackedEntities =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getTrackedEntity().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertContainsOnly(List.of("dUE514NMOlo"), trackedEntities);
   }
 
   @Test
   void testEnrollmentOccurredAfterSetToAfterLastOccurredAtDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder
             .enrollmentOccurredAfter(parseDate("2021-03-28T13:05:00.000"))
@@ -1014,14 +1010,14 @@ class EventExporterTest extends TrackerTest {
     List<String> enrollments =
         eventService.getEvents(params).stream()
             .map(event -> event.getEnrollment().getUid())
-            .collect(Collectors.toList());
+            .toList();
 
     assertIsEmpty(enrollments);
   }
 
   @Test
   void shouldReturnNoEventsWhenParamStartDueDateLaterThanEventDueDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder.scheduledAfter(parseDate("2021-02-28T13:05:00.000")).build();
 
@@ -1032,7 +1028,7 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnEventsWhenParamStartDueDateEarlierThanEventsDueDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder.scheduledAfter(parseDate("2018-02-28T13:05:00.000")).build();
 
@@ -1043,7 +1039,7 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnNoEventsWhenParamEndDueDateEarlierThanEventDueDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder.scheduledBefore(parseDate("2018-02-28T13:05:00.000")).build();
 
@@ -1054,7 +1050,7 @@ class EventExporterTest extends TrackerTest {
 
   @Test
   void shouldReturnEventsWhenParamEndDueDateLaterThanEventsDueDate()
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     EventOperationParams params =
         operationParamsBuilder.scheduledBefore(parseDate("2021-02-28T13:05:00.000")).build();
 
@@ -1083,7 +1079,7 @@ class EventExporterTest extends TrackerTest {
   }
 
   private List<String> getEvents(EventOperationParams params)
-      throws ForbiddenException, BadRequestException, NotFoundException {
+      throws ForbiddenException, BadRequestException {
     return uids(eventService.getEvents(params));
   }
 
